[package]
name = "sap-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
mouse-rs = "0.4.2"
rdev = "0.5.3"
screenshots = "0.8.2"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "sync"] }
winput = "0.2.5"
