[package]
name = "sap-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive", "cargo"] }
image = "0.24.7"
screenshots = "0.8.2"
serde = { version = "1.0.188", features = ["derive"] }
speedy2d = "1.12.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "sync"] }
toml = "0.8.0"
winput = "0.2.5"
